Added navbar + landing page

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,5 @@
-<p>landing works!</p>
+<!DOCTYPE html>
+<div class="content">
+    <h1>Welcome to our application!</h1>
+    <p-button label="Get Started" [raised]="true" routerLink="/record"></p-button>
+</div>
