Hyperlinked navbar logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
-    <div class="header">
-      <img src="assets/outbrand.jpeg" height="50" class="mr-2">
-      <h1 class="title">Outbrand AI</h1>
-    </div>  
+      <a class="header" routerLink="https://outbrand.ai/">
+        <img src="assets/outbrand.jpeg" height="50" class="mr-2">
+        <h1 class="title">Outbrand AI</h1>
+      </a> 
   </ng-template>
 </p-menubar>
 
