--- a/src/app/record-rtc/record-rtc.component.css
+++ b/src/app/record-rtc/record-rtc.component.css
@@ -1,36 +1,63 @@
+
+
 .video-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .video-timer {
-    text-align: center;
-    font-size: 1.2em;
-    margin-bottom: 1em;
-  }
-  
-  .video {
-    position: relative;
-    z-index: 2;
-  }
-  
-  .video-placeholder {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #ccc;
-    background-color: #eee;
-    z-index: 1;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60vw; /* Set to 60% of viewport */
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-timer {
+  text-align: center;
+  font-size: 1.2em;
+  margin-bottom: 1em;
+}
+
+.video {
+  position: relative;
+  width: 100%;
+  height: auto;
+  z-index: 2;
+}
+
+.countdown-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.countdown {
+  font-size: 3em;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.video-placeholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  background-color: #eee;
+  z-index: 1;
+}
