--- a/src/app/record-rtc/record-rtc.component.html
+++ b/src/app/record-rtc/record-rtc.component.html
@@ -1,13 +1,18 @@
 <div class="p-grid p-justify-center p-align-center">
+  <p-steps [model]="stepItems" [activeIndex]="activeIndex" [readonly]="true"></p-steps>
   <div class="p-col-12 p-md-8 p-lg-6">
-    <p-card title="Video Quality">
-      <p-selectButton [options]="videoQualities" [(ngModel)]="selectedQuality" optionLabel="label" optionValue="value"></p-selectButton>
+    <p-card>
+      <h1>Render Quality</h1>
+      <p-selectButton [options]="videoQualities" *ngIf="activeIndex === 0" [(ngModel)]="selectedQuality" optionLabel="label" optionValue="value"></p-selectButton>
       <p-divider></p-divider>
       <div id="videoTimer" *ngIf="isVideoRecording && !videoBlobUrl" class="video-timer"> {{ videoRecordedTime }} </div>
       <div class="video-container">
         <video #videoElement class="video">
           <source *ngIf="!isVideoRecording && videoBlobUrl" [src]="videoBlobUrl">
         </video>
+        <div *ngIf="isCountdownActive" class="countdown-overlay">
+          <div class="countdown">{{ countdownValue }}</div>
+        </div>
         <div *ngIf="!(hasCamera | async)" class="video-placeholder">
           No camera found. Please check your camera permissions or connect a camera.
         </div>
@@ -15,7 +20,7 @@
       <p-footer>
         <div class="p-grid p-justify-center button-container">
           <div class="p-col">
-            <p-button label="Start Recording" class="p-button-success" *ngIf="!isVideoRecording && !videoBlobUrl" (click)="startVideoRecording()"></p-button>
+            <p-button label="Start Recording" class="p-button-success" *ngIf="!isVideoRecording && !videoBlobUrl" (click)="startRecordingCountdown()"></p-button>
           </div>
           <div class="p-col">
             <p-button label="Stop Recording" class="p-button-warning" *ngIf="isVideoRecording && !videoBlobUrl" (click)="stopVideoRecording()"></p-button>
@@ -35,7 +40,6 @@
   </div>
 </div>
 
-<!-- Upload confirmation dialog -->
 <p-dialog [(visible)]="showUploadConfirmationDialog" [modal]="true">
   <p-header>
     Confirm Upload
@@ -46,7 +50,6 @@
   </p-footer>
 </p-dialog>
 
-<!-- Upload progress dialog -->
 <p-dialog [(visible)]="showUploadProgressDialog" [modal]="true">
   <p-header>
     Uploading Video
