--- a/src/app/record-rtc/record-rtc.component.css
+++ b/src/app/record-rtc/record-rtc.component.css
@@ -7,7 +7,11 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  width: 60vw; /* Set to 60% of viewport */
+  width: 60vw;
+  border: 12px solid #a9a9a9;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
 }
 
 .button-container {
@@ -19,7 +23,30 @@
 .video-timer {
   text-align: center;
   font-size: 1.2em;
-  margin-bottom: 1em;
+  color: #fff;
+  background-color: transparent;
+  padding: 0.5em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
+  box-shadow: inset 0 -10px 10px rgba(0, 0, 0, 0.1);
+}
+
+.blinking-circle {
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  border-radius: 50%;
+  margin-right: 10px;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 0.2; }
+  50% { opacity: 1; }
+  100% { opacity: 0.2; }
 }
 
 .video {
@@ -60,4 +87,44 @@
   border: 1px solid #ccc;
   background-color: #eee;
   z-index: 1;
+}
+
+.button-spacing:not(:last-child) {
+  margin-right: 10px;
+}
+
+.my-videos-button {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+:host ::ng-deep .p-steps {
+  padding-top: 20px;
+}
+
+:host ::ng-deep .p-progressBar {
+  padding: 0 20px;
+}
+
+:host ::ng-deep .p-dialog .p-dialog-content {
+  width: 30%;
+  z-index: 1000;
+}
+
+:host ::ng-deep .p-dialog .p-dialog-footer {
+  display: flex;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.video-timer {
+  font-weight: bold;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
