Add my-videos navigation

--- a/src/app/my-videos/my-videos.component.html
+++ b/src/app/my-videos/my-videos.component.html
@@ -1,6 +1,10 @@
-<div *ngFor="let video of videos">
-    <p>{{ video.fileName }}</p>
-    <video controls [src]="video.fileLocation">
+<div class="video-container" *ngIf="videos.length > 0">
+  <h2 class="video-title">{{ videos[currentIndex].fileName }}</h2>
+  <div class="video-player">
+    <p-button class="video-nav-button" (click)="previousVideo()" [disabled]="currentIndex === 0">&#8249;</p-button>
+    <video controls [src]="videos[currentIndex].fileLocation">
       Your browser does not support the video tag.
     </video>
+    <p-button class="video-nav-button" (click)="nextVideo()" [disabled]="currentIndex === videos.length - 1">&#8250;</p-button>
   </div>
+</div>
