--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<div class="content">
-    <h1>Welcome to our application!</h1>
-    <p-button label="Get Started" [raised]="true" routerLink="/record"></p-button>
+<div class="content p-d-flex p-jc-center p-ai-center p-dir-col" style="height: 100vh;">
+    <p-card styleClass="custom-card">
+        <div class="p-card-title custom-title">Webcam Recorder</div>
+        <div class="p-card-subtitle custom-text">Record videos from your webcam and save them in your browser for download or storage.</div>
+        <div class="button-wrapper">
+            <p-button label="Get Started" [raised]="true" routerLink="/record"></p-button>
+        </div>
+    </p-card>
 </div>
