--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,23 @@ a {
   color: inherit;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.custom-footer {
+  background-color: #333;
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+  width: 100%;
+  flex-shrink: 0;
+}
