--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <ng-template pTemplate="start">
       <a class="header" routerLink="https://outbrand.ai/">
         <img src="assets/outbrand.jpeg" height="50" class="mr-2">
-        <h1 class="title">Outbrand AI</h1>
+        <h1 class="title">Outbrand</h1>
       </a> 
   </ng-template>
 </p-menubar>
@@ -12,6 +12,6 @@
 
 <router-outlet></router-outlet>
 
-<footer>
-<p>&copy; Outbrand AI</p>
+<footer class="custom-footer">
+  <p>Created by Audric Serador</p>
 </footer>
